fixed home layout issue

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -6,8 +6,8 @@
     --app-inner-gutter: theme('spacing.20');
     --app-outer-gutter: theme('spacing.20');
     --app-header-height: 87px;
-    --app-layer-deep: -1;
-    --app-layer-deeper: -2;
+    --app-layer-one: 1;
+    --app-layer-two: 2;
 
     @screen md {
       --app-outer-gutter: theme('spacing.40');
